--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="mobiLogo" ></div>
         <!-- Navbar -->
         <!-- pc navbar -->
-        <div class="w-full h-[75px] bg-neutral-900 sticky top-0 text-white flex justify-between px-4 pt-6 md:text-xl -translate-x-[200%] md:translate-x-[0%]" >
+        <div class="w-full h-[75px] bg-neutral-900 sticky top-0 text-white flex justify-between px-4 pt-6 md:text-xl -translate-x-[200%] md:translate-x-[0%] z-10" >
             <a href=""><div id="logo"></div></a>
             <ul class="md:w-[50%] lg:w-[35%] flex justify-around h-fit">
                 <li class="hover:scale-110 duration-200 rounded-xl hover:border-b-4 px-2 hover:text-primaryColor hover:border-primaryColor/50"><a href="">Home</a></li>
@@ -63,7 +63,13 @@
                 <p class="w-full text-justify" id="desc">Naruto is a Japanese manga series written and illustrated by Masashi Kishimoto. It tells the story of Naruto Uzumaki, a young ninja who seeks recognition from his peers and ...</p>
             </div>
         </div>
-
+        <!-- stats -->
+        <div class="w-[95vw] md:w-[60vw] h-[100px] bg-primaryColor mx-auto rounded-xl shadow-lg shadow-primaryColor/20 -translate-y-8 flex justify-between px-[5%] py-5" id="statDiv">
+            <div class="w-[30%] text-center"><p class="text-2xl font-bold" ><span id="hrs"></span>+</p><p class="font-semibold">Hours</p></div>
+            <div class="w-[30%] text-center"><p class="text-2xl font-bold" ><span id="episodes"></span>+</p><p class="font-semibold">Episodes</p></div>
+            <div class="w-[30%] text-center"><p class="text-2xl font-bold" ><span id="anime"></span>+</p><p class="font-semibold">Anime</p></div>
+        </div>
         <script src="/src/navbar.js" async defer></script>
+        <script src="/src/js/stats.js" ></script>
     </body>
 </html>
